// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-caXVBt efHDjS"
    >
      <div
        class="sc-lkwKjF kpvPDv"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK fDtTuc sc-caXVBt efHDjS"
    >
      <div
        class="sc-lkwKjF gPZNod"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-jmNpzm iKIurY iITdfN sc-caXVBt efHDjS"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dUWWNf efXsRo dZYlTq"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg"
        >
          <div
            class="sc-lkwKjF kpvPDv"
          />
          <div
            class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-hsOonA kVcSYM"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds bjjfxN"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-caXVBt efHDjS"
    >
      <div
        class="sc-lkwKjF kpvPDv"
      />
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf kcqfxY"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-caXVBt efHDjS"
    >
      <div
        class="sc-lkwKjF kpvPDv"
      />
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
